fix font size too big

--- a/src/navigation/navigation.scss
+++ b/src/navigation/navigation.scss
@@ -59,7 +59,7 @@ nav {
             white-space: nowrap;
             .ui-menu-item-wrapper {
                padding: 10px 30px;
-               font-size: 16px;
+               font-size: 14px;
             }
            div {
              font-size: 1rem;
@@ -68,7 +68,7 @@ nav {
          }
          .ui-widget.ui-widget-content {
             border: none !important;
-            font-size: 16px;
+            font-size: 14px;
          }
          li {
             min-width: 130px;
